Minor Fixes in Responsive on Mobile

--- a/styles/partials/_login.scss
+++ b/styles/partials/_login.scss
@@ -48,3 +48,24 @@
   margin-top: 5rem;
   margin-bottom: 5rem;
 }
+
+@media screen and (max-width: 768px) {
+  .log-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  .social-icons ul {
+    justify-content: center;
+  }
+  .logoFooter {
+    justify-content: center;
+  }
+  .logo-text {
+    color: whitesmoke;
+    font-size: 2rem;
+    font-weight: 600;
+    margin-left: 1rem;
+  }
+}
