--- a/styles/styles.css
+++ b/styles/styles.css
@@ -695,7 +695,6 @@ ul {
 /**********
  * ALBUMS *
  **********/
-/* Container for 'Looking for music?' heading, 'Start listening to the best new releases' paragraph and 'launch web player' button */
 .albums-content {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -711,20 +710,17 @@ ul {
   padding: 5rem 1.5rem;
 }
 
-/* 'Looking for music?' heading */
 .albums-content h2 {
   font-size: 3rem;
   margin-bottom: 1.5rem;
   text-shadow: 0 0 0.1rem var(--black);
 }
 
-/* 'Start listening to the best new releases' paragraph */
 .albums-content p {
   font-size: 1.8rem;
   margin-bottom: 2rem;
 }
 
-/* 'Launch web player' button */
 .albums-content button {
   padding: 1.5rem 4.5rem;
   border-radius: 3rem;
@@ -757,12 +753,10 @@ ul {
   padding-bottom: 8rem;
 }
 
-/* Removes the horizontal scrollbar */
 .albums-cards-container::-webkit-scrollbar {
   display: none;
 }
 
-/* Container for the album image and the album info */
 .album {
   min-width: 50%;
   padding-left: 3.5rem;
@@ -803,8 +797,6 @@ ul {
   text-align: center;
 }
 
-/* Song title and artist name */
-/* This code will avoid text from wrapping to the next line and it will add an ellipsis at the end */
 .album-info h2,
 .album-info h4 {
   white-space: nowrap;
@@ -813,14 +805,12 @@ ul {
   width: 100%;
 }
 
-/* Song title */
 .album-info h2 {
   font-size: 1.75rem;
   color: var(--gray2);
   padding-top: 2rem;
 }
 
-/* Artist name */
 .album-info h4 {
   font-size: 1.5rem;
   color: var(--gray1);
@@ -832,7 +822,6 @@ ul {
   cursor: pointer;
 }
 
-/* Play now button */
 .album-info a {
   font-size: 1.5rem;
   color: var(--green2);
@@ -991,12 +980,10 @@ ul {
   .nav-mobile {
     display: none;
   }
-  /* Circle around the profile icon */
   .profile {
     width: 4rem;
     height: 4rem;
   }
-  /* Profile icon */
   .profile svg {
     width: 2rem;
   }
@@ -1157,5 +1144,39 @@ ul {
 .login {
   margin-top: 5rem;
   margin-bottom: 5rem;
+}
+
+@media screen and (max-width: 768px) {
+  .log-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .social-icons ul {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .logoFooter {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .logo-text {
+    color: whitesmoke;
+    font-size: 2rem;
+    font-weight: 600;
+    margin-left: 1rem;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
